# cmake-examples

./: README.md
example1/: CMakeLists.txt  README.md
example1/include/: calculator.hpp
example1/src/: calculator.cpp  main.cpp
example2-library/: CMakeLists.txt  README.md
example2-library/lib/awesome-npc/: CMakeLists.txt
example2-library/lib/awesome-npc/include/awesome-npc/: NPC.hpp  Shopkeeper.hpp
example2-library/lib/awesome-npc/src/: NPC.cpp  Shopkeeper.cpp
example2-library/src/: main.cpp
example3-external-library/: CMakeLists.txt  README.md
example3-external-library/include/: sleep.hpp
example3-external-library/src/: main.cpp
